<resources>
    <string name="app_name">MDb Movies &amp; TV</string>
    <string name="typeMovieNameET">Type the movie name here...</string>
    <string name="searchForAmovieET">Type movie name here...</string>
    <string name="search">search</string>
    <string name="addAnewMoviewTV">Add a new movie</string>
    <string name="MovieTitle">Movie Title:</string>
    <string name="movietitleET">ex: Bad Boys..</string>
    <string name="movieDescription">Movie Description:</string>
    <string name="movieBody">ex: Bad Boys was first shown on 1992...</string>
    <string name="imageURL">Image URL:</string>
    <string name="imageAdress">Image adress...</string>
    <string name="cancell">Cancel</string>
    <string name="save">Save</string>
    <string name="movieImage">Movie Image</string>
    <string name="addToFavorites">Add to Favorites</string>
    <string name="favoritesActivity">My Favorite Movies</string>
    <string name="searchOnLineActivity">Search On Line</string>
    <string name="saveAmovieActivity">Save a new movie</string>
    <string name="deleteAllToast">You have deleted all items</string>
    <string name="deleteAllToasTotalOf">a total of</string>
    <string name="shareItem">share</string>
    <string name="editItem">Edit</string>
    <string name="releaseDateTV">Release Date:</string>
    <string name="releaseDateET">22/05/1993</string>
    <string name="itemSavedSuccessfuly">Item saved successfully</string>
    <string name="erorSavingItem">Error Saving Item</string>
    <string name="movieTitleIsRequired">Movie title is required!</string>
    <string name="deleteItem">Delete</string>
    <string name="deleteSuccessfull">Item was removed from favorites</string>
    <string name="FavoritesItemUpdated">Item was successfully updated</string>
    <string name="updateItemWasCancelled">Updating the item was cancelled</string>
    <string name="showMoreBtn">More Details</string>
    <string name="moreBtn">See More</string>
    <string name="backBtn">Back</string>
    <string name="searcingDialog">Searching, Please wait</string>
    <string name="loading">Loading...</string>
    <string name="nothingFound">Nothing found, try a different input</string>
    <string name="detailsRatingTV">Rating</string>
    <string name="detailsRunTimeTV">Runtime</string>
    <string name="detailsTotalVotesTV">Votes</string>
    <string name="detailsOverviewHeaderTV">Overview</string>
    <string name="detailsTrailerHeaderTV">Trailer</string>
    <string name="noTrailers">No trailers avaliable</string>
    <string name="itemAlreadyExists">Item already exists in favorites</string>
    <string name="markWatched">Mark as watched</string>
    <string name="markedAsWatched">Marked as watched</string>
    <string name="markedAsNotWatched">Marked as not watched</string>
    <string name="itemSavedAndMarkedWatched">Item saved to favorites and marked as watched</string>
    <string name="chooseFromTheAboveDialogHeader">Choose from the above</string>
    <string name="dialogBuilderMessage">Would you like to search for a movie on-line or add one by your own?</string>
    <string name="addDialogBtn">add</string>
    <string name="sortByTV">Sort By:</string>
    <string name="mostPopular">Most popular</string>
    <string name="nowShowing">Now in theaters</string>
    <string name="comingSoon">Coming soon</string>
    <string name="myFavorites">My Favorites</string>
    <string name="noInternetConnection">No Network connection available, try again when you have one</string>
    <string name="newMovie">New Movie</string>
    <string name="edit">Edit</string>
    <string name="inTheatersTV">In Theaters</string>
    <string name="tvSeriesTv">TV Series</string>
    <string name="shareMessagePartOne"><b>Would you watch </b></string>
    <string name="shareMessagePartTwo"><b>with me? </b></string>
    <string name="shareTitle">Share using one of the above"</string>

</resources>
