<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_color"
    android:fillViewport="true"
    tools:context="com.hqs.alx.tmdbcinemamovies.NewMovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newMovieHeader"
            style="@style/Headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/newMovie" />

        <com.startapp.android.publish.ads.banner.Banner
            android:id="@+id/startAppBanner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/MovieTitle" />

        <EditText
            android:id="@+id/movieTitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/movietitleET"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/bodyTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/movieDescription" />

        <EditText
            android:id="@+id/movieBodyET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/movieBody"
            android:inputType="textMultiLine|textPersonName"
            android:lines="2"
            android:maxLines="4"
            android:minLines="1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/imageTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/imageURL" />

        <LinearLayout
            android:id="@+id/parentLY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/movieImageUrlET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/imageAdress"
                android:inputType="textUri"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/showImageIV"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/movieImage"
                app:srcCompat="@drawable/play" />
        </LinearLayout>

        <TextView
            android:id="@+id/releaseDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/releaseDateTV" />

        <EditText
            android:id="@+id/movieReleaseDateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/releaseDateET"
            android:inputType="date"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/movieIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveBtn"
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/my_color"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancelBtn"
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/my_color"
                android:text="@string/cancell" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
