<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_color"
    android:fillViewport="true"
    tools:context="com.hqs.alx.tmdbcinemamovies.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            style="@style/Headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_color"
            android:padding="8dp"
            android:text="@string/mostPopular" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/horizontal_most_popular_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="240dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/textView4"
            style="@style/Headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_color"
            android:padding="8dp"
            android:text="@string/inTheatersTV" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/horizontal_coming_soon_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="240dp">

        </android.support.v7.widget.RecyclerView>

        <com.startapp.android.publish.ads.banner.Banner
            android:id="@+id/startAppBanner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textView7"
            style="@style/Headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_color"
            android:padding="8dp"
            android:text="@string/comingSoon" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/up_coming_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="240dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/textView8"
            style="@style/Headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_color"
            android:padding="8dp"
            android:text="@string/tvSeriesTv" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tv_series_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="240dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</ScrollView>
