<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_color"
    android:fillViewport="true"
    tools:context="com.hqs.alx.tmdbcinemamovies.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detailsImageIV"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="top"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/detailsMovieTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/watchedIV"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/hide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/Headers"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/detailsRatingTV" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Headers"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/detailsTotalVotesTV" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailsRatingTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="TextView" />

            <TextView
                android:id="@+id/detailsTotalVotesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="TextView" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            style="@style/Headers"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/detailsOverviewHeaderTV" />

        <TextView
            android:id="@+id/detailsMovieBodyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="TextView"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView6"
            style="@style/Headers"
            android:layout_margin="8dp"
            android:text="@string/detailsTrailerHeaderTV" />

        <ImageView
            android:id="@+id/detailsYouTubethuIV"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <com.startapp.android.publish.ads.banner.Banner
            android:id="@+id/startAppBanner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backBtn"
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/my_color"
                android:text="@string/backBtn" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
